[package]
name = "flow-trace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.7", features = ["v4"] }
vnutil = { path = "../vnutil" }
vnsvrbase = { path = "../vnsvrbase" }
vnpkt = { path = "../vnpkt" }
async-trait = { version = "0.1.77" }
slog = { version = "2.7.0" }
slog-term = { version = "2.9.1" }
slog-async = { version = "2.8.0" }
file-rotate = { version = "0.7.5" }

[dependencies.tokio]
version = "1.36"
features = ["net", "macros", "sync", "io-util", "rt-multi-thread", "time", "fs"]

[build-dependencies]
vnpkt = { path = "../vnpkt" }